relm4-macros/tests/ui/compile-fail/missing-view.stderr
error: expected `view!` macro invocation
  --> tests/ui/compile-fail/missing-view.rs:6:1
   |
6  | / impl SimpleComponent for App {
7  | |     type Init = ();
8  | |     type Input = ();
9  | |     type Output = ();
...  |
13 | |     }
14 | | }
   | |_^

error[E0046]: not all trait items implemented, missing: `Root`, `init_root`
 --> tests/ui/compile-fail/missing-view.rs:6:1
  |
6 | impl SimpleComponent for App {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `Root`, `init_root` in implementation
  |
  = help: implement the missing item: `type Root = Type;`
  = help: implement the missing item: `fn init_root() -> <Self as relm4::SimpleComponent>::Root { todo!() }`
